use newest version of clash

--- a/tools/proxy_tools/clash_install_and_setup.ipynb
+++ b/tools/proxy_tools/clash_install_and_setup.ipynb
@@ -65,28 +65,91 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "8359e27e-7f8f-42f8-aa9c-0da13a0705ec",
+      "metadata": {
+        "scrolled": true
+      },
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import requests\n",
+        "import time\n",
+        "\n",
+        "def download_and_install_clash(root_dir, clash_install_dir, clash_run_dir):\n",
+        "    def get_latest_clash_download_url(retries=3, backoff=5):\n",
+        "        url = 'https://api.github.com/repos/Dreamacro/clash/releases/latest'\n",
+        "\n",
+        "        for _ in range(retries):\n",
+        "            try:\n",
+        "                response = requests.get(url)\n",
+        "                response.raise_for_status()\n",
+        "                json_data = response.json()\n",
+        "                for asset in json_data['assets']:\n",
+        "                    if 'clash-linux-amd64' in asset['name']:\n",
+        "                        return asset['browser_download_url'], json_data['tag_name']\n",
+        "                return '', ''\n",
+        "            except requests.exceptions.RequestException as e:\n",
+        "                print(f\"\u8bf7\u6c42\u51fa\u9519: {e}\")\n",
+        "                time.sleep(backoff)\n",
+        "        else:\n",
+        "            print(\"\u8fbe\u5230\u6700\u5927\u91cd\u8bd5\u6b21\u6570\uff0c\u83b7\u53d6\u6700\u65b0\u7248\u672c\u4e0b\u8f7d\u94fe\u63a5\u5931\u8d25\")\n",
+        "            return '', ''\n",
+        "\n",
+        "    download_url, latest_version = get_latest_clash_download_url()\n",
+        "    if not download_url:\n",
+        "        print('\u83b7\u53d6\u6700\u65b0\u7248\u672c\u4e0b\u8f7d\u94fe\u63a5\u5931\u8d25')\n",
+        "        return\n",
+        "\n",
+        "    os.makedirs(os.path.join(root_dir, clash_install_dir), exist_ok=True)\n",
+        "    os.makedirs(os.path.join(root_dir, clash_run_dir), exist_ok=True)\n",
+        "\n",
+        "    file_name = download_url.split('/')[-1]\n",
+        "    local_path = os.path.join(root_dir, clash_install_dir, file_name)\n",
+        "    run_path = os.path.join(root_dir, clash_run_dir, file_name)\n",
+        "    \n",
+        "    if not os.path.exists(local_path):\n",
+        "        os.system(f'wget -P {os.path.join(root_dir, clash_install_dir)} {download_url}')\n",
+        "        print(f\"\u5df2\u4e0b\u8f7d\u6587\u4ef6 {file_name}\")\n",
+        "    else:\n",
+        "        print(f\"\u6587\u4ef6 {file_name} \u5df2\u5b58\u5728\uff0c\u65e0\u9700\u4e0b\u8f7d\")\n",
+        "\n",
+        "    os.system(f'cp {local_path} {run_path}')\n",
+        "    os.system(f'gunzip {run_path}')\n",
+        "\n",
+        "    clash_exec = os.path.join(root_dir, clash_run_dir, f'clash-linux-amd64-{latest_version}')\n",
+        "    clash_sim_exec = os.path.join(root_dir, clash_run_dir, 'clash')\n",
+        "\n",
+        "    os.system(f'chmod +x {clash_exec}')\n",
+        "    os.system(f'mv {clash_exec} {clash_sim_exec}')\n",
+        "\n",
+        "    print(\"Clash\u5df2\u7ecf\u5b89\u88c5\u3002\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "612a5127-5fc1-4023-bb42-b7d512777aa4",
       "metadata": {},
       "outputs": [],
       "source": [
         "import os\n",
         "\n",
-        "def download_clash(root_dir, clash_version, clash_install_dir, clash_run_dir):\n",
-        "    check_dist = os.path.join(root_dir, clash_install_dir, f'clash-linux-amd64-{clash_version}.gz')\n",
-        "    clash_run_dist = os.path.join(root_dir, clash_run_dir, f'clash-linux-amd64-{clash_version}.gz')\n",
-        "    if not os.path.exists(os.path.join(root_dir, clash_run_dir)):\n",
-        "        os.makedirs(os.path.join(root_dir, clash_run_dir))\n",
-        "    if os.path.isfile(check_dist):\n",
-        "        print(\"Clash\u5df2\u7ecf\u4e0b\u8f7d\u3002\")\n",
-        "        !cp $check_dist $clash_run_dist\n",
-        "    else:\n",
-        "        !wget -P {root_dir}/{clash_install_dir} https://github.com/Dreamacro/clash/releases/download/{clash_version}/clash-linux-amd64-{clash_version}.gz\n",
-        "    !gunzip {clash_run_dist}\n",
-        "    clash_EXEC = os.path.join(root_dir, clash_run_dir, f'clash-linux-amd64-{clash_version}')\n",
-        "    clash_Sim_EXEC = os.path.join(root_dir, clash_run_dir, 'clash')\n",
-        "    !chmod +x $clash_EXEC\n",
-        "    !mv $clash_EXEC $clash_Sim_EXEC\n",
-        "    print(\"Clash\u5df2\u7ecf\u5b89\u88c5\u3002\")\n",
+        "# def download_clash(root_dir, clash_version, clash_install_dir, clash_run_dir):\n",
+        "#     check_dist = os.path.join(root_dir, clash_install_dir, f'clash-linux-amd64-{clash_version}.gz')\n",
+        "#     clash_run_dist = os.path.join(root_dir, clash_run_dir, f'clash-linux-amd64-{clash_version}.gz')\n",
+        "#     if not os.path.exists(os.path.join(root_dir, clash_run_dir)):\n",
+        "#         os.makedirs(os.path.join(root_dir, clash_run_dir))\n",
+        "#     if os.path.isfile(check_dist):\n",
+        "#         print(\"Clash\u5df2\u7ecf\u4e0b\u8f7d\u3002\")\n",
+        "#         !cp $check_dist $clash_run_dist\n",
+        "#     else:\n",
+        "#         !wget -P {root_dir}/{clash_install_dir} https://github.com/Dreamacro/clash/releases/download/{clash_version}/clash-linux-amd64-{clash_version}.gz\n",
+        "#     !gunzip {clash_run_dist}\n",
+        "#     clash_EXEC = os.path.join(root_dir, clash_run_dir, f'clash-linux-amd64-{clash_version}')\n",
+        "#     clash_Sim_EXEC = os.path.join(root_dir, clash_run_dir, 'clash')\n",
+        "#     !chmod +x $clash_EXEC\n",
+        "#     !mv $clash_EXEC $clash_Sim_EXEC\n",
+        "#     print(\"Clash\u5df2\u7ecf\u5b89\u88c5\u3002\")\n",
         "    \n",
         "def download_config(root_dir, config_name, config_dir, mmdb_name, mmdb_dir, clash_install_dir, config_yaml_dist,origin_yaml_dist):\n",
         "    clash_install_path = os.path.join(root_dir, clash_install_dir)\n",
@@ -153,15 +216,37 @@
         "        yaml.dump(config, f)\n",
         "\n",
         "    print('Clash\u914d\u7f6e\u5df2\u7ecf\u6e05\u7406\u3002')\n",
-        "    \n",
+        "\n",
+        "import os\n",
+        "import sys\n",
         "import subprocess\n",
+        "import threading\n",
+        "from IPython.display import display\n",
+        "from ipywidgets import Output\n",
+        "\n",
+        "def stream_output(process, output_widget):\n",
+        "    for line in iter(process.stdout.readline, b''):\n",
+        "        output_widget.append_stdout(line.decode('utf-8'))\n",
+        "    process.stdout.close()\n",
         "\n",
         "def run_clash(root_dir, config_dir, clash_run_dir, config_yaml_dist):\n",
         "    clash_run_path = os.path.join(root_dir, clash_run_dir)\n",
         "    clash_Sim_EXEC = os.path.join(clash_run_path, 'clash')\n",
         "    cmd = [clash_Sim_EXEC, '-d', os.path.dirname(config_yaml_dist)]\n",
         "    print(cmd)\n",
-        "    subprocess.Popen(cmd, stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)\n",
+        "\n",
+        "    # \u521b\u5efa\u4e00\u4e2a Output \u5c0f\u90e8\u4ef6\n",
+        "    output_widget = Output()\n",
+        "    display(output_widget)\n",
+        "\n",
+        "    # \u542f\u52a8\u5b50\u8fdb\u7a0b\u5e76\u5c06 stdout \u548c stderr \u8bbe\u7f6e\u4e3a subprocess.PIPE\uff0c\u4ee5\u4fbf\u6211\u4eec\u53ef\u4ee5\u6355\u83b7\u8f93\u51fa\n",
+        "    process = subprocess.Popen(cmd, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
+        "\n",
+        "    # \u521b\u5efa\u4e00\u4e2a\u7ebf\u7a0b\u6765\u8bfb\u53d6\u5b50\u8fdb\u7a0b\u7684\u8f93\u51fa\u5e76\u5c06\u5176\u53d1\u9001\u5230 Output \u5c0f\u90e8\u4ef6\n",
+        "    output_thread = threading.Thread(target=stream_output, args=(process, output_widget))\n",
+        "    output_thread.start()\n",
+        "    \n",
+        "    \n",
         "\n",
         "key_values_dict = {\n",
         "    'external-controller': '127.0.0.1:7776',\n",
@@ -171,7 +256,6 @@
         "    # 'mode':'Global'\n",
         "}\n",
         "    \n",
-        "clash_version = \"v1.13.0\"\n",
         "config_name = \"Dler Cloud.yaml\"\n",
         "config_dir = \".config/clash\"\n",
         "mmdb_name = \"Country.mmdb\"\n",
@@ -181,20 +265,12 @@
         "origin_yaml_dist = os.path.join(root_dir, clash_install_dir, config_name)\n",
         "config_yaml_dist = os.path.join(root_dir, config_dir, 'config.yaml')\n",
         "\n",
-        "download_clash(root_dir, clash_version, clash_install_dir, clash_run_dir)\n",
+        "download_and_install_clash(root_dir, clash_install_dir, clash_run_dir)\n",
         "download_config(root_dir, config_name, config_dir, mmdb_name, mmdb_dir, clash_install_dir,config_yaml_dist,origin_yaml_dist)\n",
         "modify_yaml_config(config_yaml_dist, key_values_dict)\n",
         "yaml_config_clean(config_yaml_dist)\n",
         "run_clash(root_dir, config_dir, clash_run_dir,config_yaml_dist)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "bb4a8abb-79d7-42b3-bf6a-e4fa42bd66ee",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
