new ext:sd_web_ui_preset_utils

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -899,7 +899,7 @@
       "id": "0e820cb6-9569-4f10-8cbc-0842b62f4247",
       "metadata": {},
       "source": [
-        "# \u5b89\u88c5openpose-editor"
+        "## \u5b89\u88c5openpose-editor"
       ]
     },
     {
@@ -918,7 +918,7 @@
       "id": "d92d9c3c-b4ac-43e9-925e-0044134a5e78",
       "metadata": {},
       "source": [
-        "# \u5b89\u88c5clip-interrogator-ext"
+        "## \u5b89\u88c5clip-interrogator-ext"
       ]
     },
     {
@@ -937,7 +937,7 @@
       "id": "3bf2e0e0-8840-414d-8015-3124f1a09fae",
       "metadata": {},
       "source": [
-        "# \u5b89\u88c5Additonal-Networks"
+        "## \u5b89\u88c5Additonal-Networks"
       ]
     },
     {
@@ -949,6 +949,43 @@
       "source": [
         "extURL='https://github.com/kohya-ss/sd-webui-additional-networks'\n",
         "shallow_clone_ext_repo(extURL)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "daa9b5b6-2fcf-4a49-944b-8aa50ad834c0",
+      "metadata": {},
+      "source": [
+        "## \u5b89\u88c5sd_web_ui_preset_utils\u5e76\u8f7d\u5165\u9884\u8bbe"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "fae48767-5b84-4110-90f7-cb93ca287b4b",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "extURL='https://github.com/Gerschel/sd_web_ui_preset_utils'\n",
+        "shallow_clone_ext_repo(extURL)\n",
+        "\n",
+        "import os\n",
+        "\n",
+        "def create_symbolic_link(root_dir):\n",
+        "    # \u5b9a\u4e49\u539f\u59cb\u6587\u4ef6\u548c\u76ee\u6807\u6587\u4ef6\u7684\u8def\u5f84\n",
+        "    original_path = os.path.join(root_dir, 'stable-diffusion-webui', 'extensions', 'sd_web_ui_preset_utils', 'presets.json')\n",
+        "    target_path = os.path.join(root_dir, 'OneClick-stable-diffusion', 'configs', 'sd_web_ui_preset_utils', 'presets.json')\n",
+        "    \n",
+        "    # \u5220\u9664\u539f\u59cb\u6587\u4ef6\uff08\u5982\u679c\u5b58\u5728\uff09\n",
+        "    if os.path.exists(original_path):\n",
+        "        os.remove(original_path)\n",
+        "    \n",
+        "    # \u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
+        "    os.symlink(target_path, original_path)\n",
+        "    \n",
+        "    print(f\"\u7b26\u53f7\u94fe\u63a5\u5df2\u6210\u529f\u521b\u5efa\uff1a{original_path} -> {target_path}\")\n",
+        "\n",
+        "create_symbolic_link(root_dir)"
       ]
     },
     {
