--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -990,6 +990,25 @@
     },
     {
       "cell_type": "markdown",
+      "id": "b6dbdd27-36c2-40a1-a7e4-2ebc24ec757c",
+      "metadata": {},
+      "source": [
+        "## \u5b89\u88c5sd-webui-ar"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f09d4712-d208-4281-9359-f49e9252c5e5",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "extURL='https://github.com/alemelis/sd-webui-ar'\n",
+        "shallow_clone_ext_repo(extURL)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "b003ac5a-1557-4170-ad40-7a64b1c6db9c",
       "metadata": {},
       "source": [
