update models info

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1284,9 +1284,10 @@
       "source": [
         "# \u5d4c\u5165\u6a21\u578b\n",
         "ti_embeddings = [\n",
-        "    'bad_prompt_version2.pt',\n",
-        "    'EasyNegative.safetensors',\n",
-        "    'ng_deepnegative_v1_75t.pt'\n",
+        "    'bad_prompt_version2.pt', # https://huggingface.co/datasets/Nerfgun3/bad_prompt\n",
+        "    'EasyNegative.safetensors', # https://civitai.com/models/7808/easynegative\n",
+        "    'ng_deepnegative_v1_75t.pt', # https://civitai.com/models/4629/deep-negative-v1x\n",
+        "    'badhandv4.pt', # https://civitai.com/models/16993/badhandv4-animeillustdiffusion\n",
         "]\n",
         "\n",
         "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
@@ -1361,7 +1362,10 @@
         "        'animeLineartStyle_v20Offset.safetensors',  # \u7ebf\u7a3f\n",
         "        'tokiameStyleThick.safetensors',  # \u7ebf\u7a3f\n",
         "        'thickerLinesAnimeStyle_loraVersion.safetensors',  # \u63cf\u8fb9\n",
-        "        'LuisapPixelArtLORA_v1.safetensors'  # \u50cf\u7d20\u98ce\n",
+        "        'LuisapPixelArtLORA_v1.safetensors',  # \u50cf\u7d20\u98ce\n",
+        "        'aespaKarina_aespaKarinaV2.safetensors', # \u67f3\u59d0v2\n",
+        "        'aespaKarina_aespaKarinaV3.safetensors', # \u67f3\u59d0v3\n",
+        "        'cuteJointsDollsLora_2.safetensors', # BJD\u516c\u4ed4\u6548\u679c\n",
         "    ]\n",
         "\n",
         "    # \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u6a21\u578b\n",
