--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1009,6 +1009,25 @@
     },
     {
       "cell_type": "markdown",
+      "id": "9cf71d5a-229f-497d-935c-e816de158bba",
+      "metadata": {},
+      "source": [
+        "## \u5b89\u88c5depthmap2mask"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "fff3b05b-5046-4595-8382-fdf104e6ef66",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "extURL='https://github.com/Extraltodeus/depthmap2mask'\n",
+        "shallow_clone_ext_repo(extURL)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "b003ac5a-1557-4170-ad40-7a64b1c6db9c",
       "metadata": {},
       "source": [
