--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1662,7 +1662,8 @@
         "            # !cp -r $input_repos_dir/* $repos_dir\n",
         "            if os.path.exists(repos_dir):\n",
         "                !rm -rf $repos_dir\n",
-        "            !ln -s $input_repos_dir $repos_dir\n",
+        "            !cp -r $input_repos_dir $repos_dir # \u521b\u5efa\u8f6f\u94fe\u4f1a\u5bfc\u81f4\u53ea\u80fd\u53ef\u8bfb\uff0c\u4e0d\u80fd\u8986\u5199\n",
+        "            print('\u5df2\u5b8c\u6210\u590d\u5236\uff01')\n",
         "    else:\n",
         "        print('\u627e\u4e0d\u5230\u5bf9\u5e94\u7684\u6570\u636e\u96c6')\n",
         "        \n",
