--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1542,6 +1542,66 @@
     },
     {
       "cell_type": "markdown",
+      "id": "42520d1b-fd79-46c8-a253-83a6473bb5d2",
+      "metadata": {},
+      "source": [
+        "### T2I\u6a21\u578b"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "24df0d3d-c661-43f4-a9d7-33ce76e1ccf4",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# \u6a21\u578b\u540d\u79f0\n",
+        "t2i_models = [ \n",
+        "    ('t2iadapter_canny_sd14v1.pth', 'sketch_adapter_v14.yaml'), \n",
+        "    ('t2iadapter_sketch_sd14v1.pth', 'sketch_adapter_v14.yaml'),\n",
+        "    ('t2iadapter_seg_sd14v1.pth', 'image_adapter_v14.yaml'),\n",
+        "    ('t2iadapter_keypose_sd14v1.pth', 'image_adapter_v14.yaml'),  \n",
+        "    ('t2iadapter_openpose_sd14v1.pth', 'image_adapter_v14.yaml'), \n",
+        "    ('t2iadapter_color_sd14v1.pth', 't2iadapter_color_sd14v1.yaml'), \n",
+        "    ('t2iadapter_style_sd14v1.pth', 't2iadapter_style_sd14v1.yaml')\n",
+        "]\n",
+        "\n",
+        "def copy_and_rename_yaml(ref_yaml, model_name, target_dir):\n",
+        "    \"\"\"\n",
+        "    \u590d\u5236\u5e76\u91cd\u547d\u540d\u7ed9\u5b9a\u7684\u914d\u7f6e\u6587\u4ef6\u3002\n",
+        "    \u5c06\u6e90\u6587\u4ef6\u590d\u5236\u5230\u76ee\u6807\u76ee\u5f55\uff0c\u91cd\u547d\u540d\u4e3a\u4e0e\u6a21\u578b\u540d\u79f0\u76f8\u540c\u7684\u540d\u79f0\uff08\u4e0d\u5305\u62ec\u6269\u5c55\u540d\uff09\u3002\n",
+        "    Args:\n",
+        "        ref_yaml (str): \u9700\u8981\u590d\u5236\u7684\u914d\u7f6e\u6587\u4ef6\u7684\u6587\u4ef6\u540d\u3002\n",
+        "        model_name (str): \u76ee\u6807\u6a21\u578b\u7684\u540d\u79f0\u3002\n",
+        "        target_dir (str): \u76ee\u6807\u76ee\u5f55\u7684\u8def\u5f84\u3002\n",
+        "    \"\"\"\n",
+        "    # \u4ece ref_yaml \u4e2d\u63d0\u53d6\u6587\u4ef6\u540d\u548c\u6269\u5c55\u540d\n",
+        "    ref_name, ref_ext = os.path.splitext(ref_yaml)\n",
+        "\n",
+        "    # \u6784\u5efa\u76ee\u6807\u6587\u4ef6\u540d\n",
+        "    target_name = os.path.splitext(model_name)[0] + ref_ext\n",
+        "    target_path = os.path.join(target_dir, target_name)\n",
+        "    \n",
+        "    # \u68c0\u67e5\u76ee\u6807\u8def\u5f84\u662f\u5426\u5b58\u5728\u76f8\u5e94\u7684\u6587\u4ef6\n",
+        "    if os.path.exists(target_path):\n",
+        "        print(f\"{target_path} \u5df2\u7ecf\u5b58\u5728,\u8df3\u8fc7\u590d\u5236\")\n",
+        "        return\n",
+        "    \n",
+        "    yaml_path = os.path.join(target_dir, ref_yaml)\n",
+        "\n",
+        "    # \u590d\u5236\u6e90\u6587\u4ef6\u5e76\u5c06\u5176\u91cd\u547d\u540d\u4e3a\u76ee\u6807\u6587\u4ef6\u540d\n",
+        "    shutil.copyfile(yaml_path, target_path)\n",
+        "\n",
+        "# \u904d\u5386\u6a21\u578b\u540d\u79f0\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
+        "target_dir = os.path.join(webUIDir, './extensions/sd-webui-controlnet/models')\n",
+        "\n",
+        "for model_name, ref_yaml in t2i_models:\n",
+        "    check_model_and_make_symbollink(model_name, target_dir, copy_or_mount)\n",
+        "    copy_and_rename_yaml(ref_yaml, model_name, target_dir)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "a960aaae-2871-4a6e-851d-d1f113d998ad",
       "metadata": {},
       "source": [
