--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -918,7 +918,7 @@
       "id": "d92d9c3c-b4ac-43e9-925e-0044134a5e78",
       "metadata": {},
       "source": [
-        "## \u5b89\u88c5clip-interrogator-ext"
+        "## \u5b89\u88c5CLIP Interrogator extension"
       ]
     },
     {
@@ -2042,8 +2042,16 @@
         "    config['extra_networks_default_view'] = \"thumbs\"\n",
         "    # Extra Networks\u7684\u9ed8\u8ba4\u7cfb\u6570\n",
         "    config['extra_networks_default_multiplier'] = 0.6\n",
+        "    \n",
         "    # ControlNet\u591a\u5f00\u7684\u6570\u91cf\n",
         "    config['control_net_max_models_num'] = 8\n",
+        "    # ControlNet\u9884\u5904\u7406\u5668\u56fe\u7247\u81ea\u52a8\u4fdd\u5b58\n",
+        "    config['control_net_detectmap_autosaving'] = True\n",
+        "    # \u5141\u8bb8\u5176\u4ed6\u811a\u672c\u63a7\u5236ControlNet\u62d3\u5c55\n",
+        "    config['control_net_allow_script_control'] = True\n",
+        "    # \u542f\u7528\u57fa\u4e8eCFG\u7684\u5f15\u5bfc(CFG-Based guidance)\uff08\u914d\u5408\u65e0\u63d0\u793a\u8bcd(prompt)\u6a21\u5f0f\u4f7f\u7528\u65f6\u8bf7\u5220\u9664\u6240\u6709\u63d0\u793a\u8bcd\uff0c\u63a8\u8350\u8bbe\u7f6e\"\u91c7\u6837\u6b21\u6570\uff1a50\uff0cCFG\uff1a3~5\"\uff0cControlNet\u5c06\u4f1a\u81ea\u52a8\u8bc6\u522b\u8f93\u5165\u7684\u6a21\u5f0f\u56fe\uff09\n",
+        "    config['control_net_cfg_based_guidance'] = True\n",
+        "    \n",
         "    # CLIP skip \u7cfb\u6570 2\n",
         "    config['CLIP_stop_at_last_layers'] = 2\n",
         "    # \u542f\u52a8\u7f51\u9875\u65f6\u5bf9\u56fe\u5e93\u6d4f\u89c8\u5668\u8fdb\u884c\u9884\u52a0\u8f7d\n",
@@ -2052,6 +2060,7 @@
         "    config['localization'] = 'zh_CN'\n",
         "    # \u8bbe\u7f6e\u9884\u89c8\u6b65\u6570\uff0c\u9ed8\u8ba4\u4e3a10\n",
         "    config['show_progress_every_n_steps'] = 10\n",
+        "\n",
         "    return config\n",
         "\n",
         "modify_config(modify, backup_folder=\"config_backups\")"
