--- a/tools/proxy_tools/clash_install_and_setup.ipynb
+++ b/tools/proxy_tools/clash_install_and_setup.ipynb
@@ -98,12 +98,16 @@
         "    download_url, latest_version = get_latest_clash_download_url()\n",
         "    if not download_url:\n",
         "        print('\u83b7\u53d6\u6700\u65b0\u7248\u672c\u4e0b\u8f7d\u94fe\u63a5\u5931\u8d25')\n",
-        "        return\n",
+        "        # return\n",
         "\n",
         "    os.makedirs(os.path.join(root_dir, clash_install_dir), exist_ok=True)\n",
         "    os.makedirs(os.path.join(root_dir, clash_run_dir), exist_ok=True)\n",
-        "\n",
-        "    file_name = download_url.split('/')[-1]\n",
+        "    \n",
+        "    if not download_url:\n",
+        "        file_name = 'clash-linux-amd64-v1.14.0.gz'\n",
+        "        latest_version = '1.14.0'\n",
+        "    else:\n",
+        "        file_name = download_url.split('/')[-1]\n",
         "    local_path = os.path.join(root_dir, clash_install_dir, file_name)\n",
         "    run_path = os.path.join(root_dir, clash_run_dir, file_name)\n",
         "    \n",
@@ -271,6 +275,14 @@
         "yaml_config_clean(config_yaml_dist)\n",
         "run_clash(root_dir, config_dir, clash_run_dir,config_yaml_dist)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a95d5d7f-7e6c-4e2a-aee4-180c8af78051",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
