--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1434,8 +1434,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "679b7502-5750-4fbb-88c8-90cf2c2575cf",
-      "metadata": {},
+      "id": "1d722bb2-731f-4cb9-919c-8ded63c683f6",
+      "metadata": {
+        "jp-MarkdownHeadingCollapsed": true
+      },
       "outputs": [],
       "source": [
         "# GFPGAN\n",
@@ -1443,7 +1445,8 @@
         "check_model_and_make_symbollink('detection_Resnet50_Final.pth','./models/GFPGAN',copy_or_mount)\n",
         "check_model_and_make_symbollink('parsing_parsenet.pth','./models/GFPGAN',copy_or_mount)\n",
         "# Codeformer\n",
-        "check_model_and_make_symbollink('codeformer-v0.1.0.pth','./models/Codeformer',copy_or_mount)"
+        "check_model_and_make_symbollink('codeformer-v0.1.0.pth','./models/Codeformer',copy_or_mount)\n",
+        "check_model_and_make_symbollink('detection_Resnet50_Final.pth','./repositories/CodeFormer/weights/facelib/',copy_or_mount)"
       ]
     },
     {
@@ -1746,9 +1749,7 @@
     {
       "cell_type": "markdown",
       "id": "46ccaa61-cd93-446d-9693-da64c2ed9ea4",
-      "metadata": {
-        "jp-MarkdownHeadingCollapsed": true
-      },
+      "metadata": {},
       "source": [
         "## \u5b9a\u4e49\u8981\u5199\u5165\u7684JSON\u5bf9\u8c61\uff08\u592a\u957f\u4e86\uff0c\u5efa\u8bae\u6298\u53e0\uff09"
       ]
@@ -2077,7 +2078,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "43bd2fb8-e193-4b6f-8530-d4b93cff5a19",
+      "id": "f6bd1b88-42eb-414a-9d03-9cd3a4d7044d",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -2162,14 +2163,6 @@
         "\n",
         "!$cmd"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "74706ef4-e2df-41ad-bfd8-26001781f300",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
