add Aspect Ratio Helper

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1009,6 +1009,29 @@
     },
     {
       "cell_type": "markdown",
+      "id": "afc7d9d7-e12c-4496-a422-490722a38ea3",
+      "metadata": {},
+      "source": [
+        "## \u5b89\u88c5 Aspect Ratio Helper\n",
+        "\ud83d\udcd0 Aspect Ratio Helper \u662f\u4e00\u4e2a\u7b80\u5355\u7684\u6269\u5c55\uff0c\u53ef\u4ee5\u5728\u6539\u53d8\u5c3a\u5bf8\u65f6\u8f7b\u677e\u5730\u4fdd\u6301\u5bbd\u9ad8\u6bd4\u3002\u8be5\u6269\u5c55\u53ef\u4ee5\u901a\u8fc7 AUTOMATIC1111 webui \u7684\u6269\u5c55\u9009\u9879\u5361\u8fdb\u884c\u5b89\u88c5\u3002\u5b83\u6709\u4ee5\u4e0b\u51e0\u4e2a\u4e3b\u8981\u529f\u80fd\uff1a\n",
+        "\u6309\u6700\u5927\u5bbd\u5ea6\u6216\u9ad8\u5ea6\u7f29\u653e\n",
+        "\u6309\u767e\u5206\u6bd4\u7f29\u653e\n",
+        "\u53ef\u4ee5\u901a\u8fc7\u8bbe\u7f6e\u8fdb\u884c\u81ea\u5b9a\u4e49\uff0c\u5982\u662f\u5426\u9ed8\u8ba4\u5c55\u5f00\u7b49\u3002"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "cece3e19-d6c6-4fe8-8c72-21a8e2d4d8f0",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "extURL='https://github.com/thomasasfk/sd-webui-aspect-ratio-helper'\n",
+        "shallow_clone_ext_repo(extURL)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "9cf71d5a-229f-497d-935c-e816de158bba",
       "metadata": {},
       "source": [
