--- a/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
+++ b/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
@@ -869,6 +869,177 @@
     },
     {
       "cell_type": "markdown",
+      "id": "ab85bfc6-63f4-4693-9b2d-2fb5acce90ce",
+      "metadata": {},
+      "source": [
+        "# \u6302\u8f7dBLIP\u6a21\u578b"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "82e109f6-d86b-4683-9ce0-8f5de12099fe",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "\n",
+        "# torch_hub_checkpoints_dir = os.path.abspath(os.path.join(root_dir,'.torch/hub/checkpoints/'))\n",
+        "# print(torch_hub_checkpoints_dir)\n",
+        "\n",
+        "# \u8be5\u6a21\u578b\u7684\u4e0b\u8f7d\u5730\u5740\u4e3a\uff1ahttps://storage.googleapis.com/sfr-vision-language-research/BLIP/models/model_large_caption.pth\n",
+        "check_model_and_make_symbollink_general('model_large_caption.pth','.torch/hub/checkpoints/',copy_or_mount,root_dir)\n",
+        "\n",
+        "# Clip-Interrogator \u6a21\u578b\n",
+        "vit_models = [\n",
+        "    'ViT-L-14_openai_artists.safetensors',\n",
+        "    'ViT-L-14_openai_flavors.safetensors',\n",
+        "    'ViT-L-14_openai_mediums.safetensors',\n",
+        "    'ViT-L-14_openai_movements.safetensors',\n",
+        "    'ViT-L-14_openai_negative.safetensors',\n",
+        "    'ViT-L-14_openai_trendings.safetensors'\n",
+        "]\n",
+        "\n",
+        "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
+        "for model in vit_models:\n",
+        "    check_model_and_make_symbollink_general(model, './models/clip', copy_or_mount, comfyUIDir)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "8a7759e5-e1d7-4bfe-a5cf-15b184ee4618",
+      "metadata": {},
+      "source": [
+        "## \u6302\u8f7dTI\u00b7Embedding"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "7c217df4-5e90-456d-b182-b60d24593d7a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# \u5d4c\u5165\u6a21\u578b\n",
+        "ti_embeddings = [\n",
+        "    'bad_prompt_version2.pt', # https://huggingface.co/datasets/Nerfgun3/bad_prompt\n",
+        "    'EasyNegative.safetensors', # https://civitai.com/models/7808/easynegative\n",
+        "    'ng_deepnegative_v1_75t.pt', # https://civitai.com/models/4629/deep-negative-v1x\n",
+        "    'badhandv4.pt', # https://civitai.com/models/16993/badhandv4-animeillustdiffusion\n",
+        "]\n",
+        "\n",
+        "# \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\n",
+        "for model in ti_embeddings:\n",
+        "    check_model_and_make_symbollink_general(model, './models/embeddings', copy_or_mount, comfyUIDir)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "5f910188-6117-42a2-814a-3ffc2847458a",
+      "metadata": {},
+      "source": [
+        "# \u6302\u8f7dLoRA\u6a21\u578b"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "12ac8b21-ed6e-44e8-a224-5e747c3e221e",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "\n",
+        "def create_model_with_thumbnail(model_name, models_dir, use_symlink, repo_dir):\n",
+        "    #\u5148\u590d\u5236LoRA\u6a21\u578b\n",
+        "    input_dir = check_model_and_make_symbollink_general(model_name, models_dir, use_symlink, repo_dir)\n",
+        "    \n",
+        "    if input_dir:\n",
+        "        file_name, ext = os.path.splitext(model_name)\n",
+        "        thumbnail_name = file_name + '.png'\n",
+        "        thumbnail_path = os.path.join(input_dir, thumbnail_name)\n",
+        "\n",
+        "        thumbnail_exts = ['png', 'jpg', 'jpeg', 'bmp', 'gif']\n",
+        "        for ext in thumbnail_exts:\n",
+        "            thumbnail_name = file_name + '.' + ext\n",
+        "            thumbnail_path = os.path.join(input_dir, thumbnail_name)\n",
+        "            if os.path.exists(thumbnail_path):\n",
+        "                print(f'\u627e\u5230\u7f29\u7565\u56fe\uff1a{thumbnail_name}')\n",
+        "                # \u518d\u590d\u5236\u7f29\u7565\u56fe\n",
+        "                check_model_and_make_symbollink_general(thumbnail_name, models_dir, use_symlink, repo_dir)\n",
+        "                return\n",
+        "        print('\u672a\u627e\u5230\u7f29\u7565\u56fe')\n",
+        "\n",
+        "SD_orig_Lora_dir = './models/loras'\n",
+        "# Additional_Networks_Lora_dir = './extensions/sd-webui-additional-networks/models/lora'\n",
+        "\n",
+        "# create_symlink(\n",
+        "#     source_path = os.path.abspath(os.path.join(webUIDir,SD_orig_Lora_dir)),\n",
+        "#     symlink_path = os.path.abspath(os.path.join(webUIDir,Additional_Networks_Lora_dir)),\n",
+        "# )\n",
+        "\n",
+        "for i in [SD_orig_Lora_dir]:\n",
+        "    # \u6a21\u578b\n",
+        "    LoRA_models = [\n",
+        "        'Akira Toriyama.safetensors',  # \u9e1f\u5c71\u660e\u98ce\u683c\n",
+        "        'Makima.safetensors',  # \u7535\u952f\u4eba \u739b\u5947\u739b\n",
+        "        'animeScreencapStyle_v230epochs.safetensors',  # \u52a8\u753b\u7247\u8d28\u611f\n",
+        "        'kamehameha.safetensors',  # \u9f9f\u6ce2\u6c14\u529f\n",
+        "        'lisaLoraCollectionOf_singleLoraLisa.safetensors',  # \u539f\u795e \u4e3d\u838e \u6a21\u578b\n",
+        "        'princess zelda.safetensors',  # \u585e\u5c14\u8fbe\u516c\u4e3b\u6a21\u578b\n",
+        "        'pyraMythraPneuma_50Epochs.safetensors',  # \u5f02\u5ea6\u4e4b\u5203\u6a21\u578b\n",
+        "        'wlop.safetensors',  # wlop\u753b\u98ce\u6a21\u578b\n",
+        "        'yakumo_yukari.pt',  # \u516b\u4e91\u7d2b\u6a21\u578b\n",
+        "        'atomicHeartTwins_v1.safetensors',  # \u539f\u5b50\u4e4b\u5fc3 \u53cc\u751f\u821e\u4f36\u6a21\u578b\n",
+        "        'atomictwinnies_v10.safetensors',  # \u539f\u5b50\u4e4b\u5fc3 \u53cc\u751f\u821e\u4f36\u6a21\u578b\n",
+        "        'bliznyashkiTheTwins_v1.safetensors',  # \u539f\u5b50\u4e4b\u5fc3 \u53cc\u751f\u821e\u4f36\u6a21\u578b\n",
+        "        'epiNoiseoffset_v2.safetensors',  # Noise Offset\u6a21\u578b\n",
+        "        'epiNoiseoffset_v2Pynoise.safetensors',  # Noise Offset\u6a21\u578b\n",
+        "        'Moxin_10.safetensors',  # \u58a8\u5fc3\u98ce\u683c\n",
+        "        'charturnerbetaLora_charturnbetalora.safetensors',  # \u89d2\u8272\u591a\u89c6\u89d2\u56fe\n",
+        "        'animeLineartStyle_v20Offset.safetensors',  # \u7ebf\u7a3f\n",
+        "        'tokiameStyleThick.safetensors',  # \u7ebf\u7a3f\n",
+        "        'thickerLinesAnimeStyle_loraVersion.safetensors',  # \u63cf\u8fb9\n",
+        "        'LuisapPixelArtLORA_v1.safetensors',  # \u50cf\u7d20\u98ce\n",
+        "        'aespaKarina_aespaKarinaV2.safetensors', # \u67f3\u59d0v2\n",
+        "        'aespaKarina_aespaKarinaV3.safetensors', # \u67f3\u59d0v3\n",
+        "        'cuteJointsDollsLora_2.safetensors', # BJD\u516c\u4ed4\u6548\u679c\n",
+        "    ]\n",
+        "\n",
+        "    # \u904d\u5386\u6a21\u578b\u5217\u8868\u5e76\u521b\u5efa\u6a21\u578b\n",
+        "    for model in LoRA_models:\n",
+        "        create_model_with_thumbnail(model, i, copy_or_mount,comfyUIDir)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "7209891a-ec35-43a3-908d-3b64dbfa0ef7",
+      "metadata": {},
+      "source": [
+        "### Upscale\u6a21\u578b"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "68dfcf1f-1497-4c64-8b7e-c16bb3ed08ca",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "models_to_check = [\n",
+        "    'SwinIR_4x.pth',\n",
+        "    'RealESRGAN_x4plus.pth',\n",
+        "    'BSRGAN.pth',\n",
+        "    '4x_foolhardy_Remacri.pth',\n",
+        "    'ESRGAN_4x.pth'\n",
+        "]\n",
+        "\n",
+        "for model in models_to_check:\n",
+        "    check_model_and_make_symbollink_general(model, './models/upscale_models', copy_or_mount, comfyUIDir)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "671a2026-3792-4f38-94a5-fb0351eb928a",
       "metadata": {},
       "source": [
