--- a/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
+++ b/ipynb/ComfyUI/OneClick-ComfyUI-for-Openbayes.ipynb
@@ -719,7 +719,7 @@
         "    \n",
         "    update_sd_webui_args = base_args[:]\n",
         "    update_sd_webui_args += [\n",
-        "        f'cd {compfyUIDir}','&&',\n",
+        "        f'cd {comfyUIDir}','&&',\n",
         "        'git pull','&&',\n",
         "        # 'git checkout d8f8bcb','&&'\n",
         "        'python -V',\n",
@@ -1047,22 +1047,76 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "54abc048-058e-4d5a-b5de-dbb8419e3f44",
-      "metadata": {},
-      "outputs": [],
+      "cell_type": "markdown",
+      "id": "60088d0c-28ca-4c00-92ee-c38870c728b8",
+      "metadata": {
+        "id": "kkkkkkkkkkkkkk"
+      },
       "source": [
-        "launch_args = base_args[:] + [\n",
-        "    f'cd {comfyUIDir}','&&',\n",
-        "    'python main.py'\n",
-        "]"
+        "### Run ComfyUI with localtunnel (Recommended Way)\n",
+        "\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "18945cc3-c10b-4f8b-a3e2-7b5cd0e3e18e",
+      "id": "a7e5f339-b399-40cd-9a91-438ed117ad1f",
+      "metadata": {
+        "id": "jjjjjjjjjjjjj"
+      },
+      "outputs": [],
+      "source": [
+        "import shutil\n",
+        "\n",
+        "if shutil.which(\"lt\") is None:\n",
+        "    print(\"Installing localtunnel...\")\n",
+        "    !npm install -g localtunnel\n",
+        "else:\n",
+        "    print(\"Localtunnel is already installed.\")\n",
+        "\n",
+        "import threading\n",
+        "import time\n",
+        "import socket\n",
+        "import os\n",
+        "\n",
+        "def iframe_thread(port, subdomain):\n",
+        "    while True:\n",
+        "        time.sleep(0.5)\n",
+        "        sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+        "        result = sock.connect_ex(('127.0.0.1', port))\n",
+        "        if result == 0:\n",
+        "            break\n",
+        "        sock.close()\n",
+        "    print(\"\\nComfyUI finished loading, trying to launch localtunnel (if it gets stuck here localtunnel is having issues)\")\n",
+        "    p = subprocess.Popen([\"lt\", \"--port\", \"{}\".format(port), \"--subdomain\", \"{}\".format(subdomain)], stdout=subprocess.PIPE)\n",
+        "    for line in p.stdout:\n",
+        "        print(line.decode(), end='')\n",
+        "\n",
+        "\n",
+        "port = 8188\n",
+        "subdomain = 'logicomfyui'\n",
+        "\n",
+        "launch_args = base_args[:] + [\n",
+        "    f'cd {comfyUIDir}','&&',\n",
+        "    'python main.py',\n",
+        "    f'--port {port}',\n",
+        "    # '--dont-print-server' # \u4f7f\u7528\u8fd9\u4e2aflag\u5c06\u4f1a\u628a\u670d\u52a1\u7aef\u7684\u6253\u5370\u9759\u97f3\n",
+        "]\n",
+        "\n",
+        "launch_cmd = (\" \").join(launch_args)\n",
+        "print(launch_cmd)\n",
+        "        \n",
+        "threading.Thread(target=iframe_thread, daemon=True, args=(port,subdomain)).start()\n",
+        "\n",
+        "!$launch_cmd\n",
+        "# !python main.py --dont-print-server"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "6902ff43-6cf7-411a-80aa-d4ed779fbac6",
       "metadata": {},
       "outputs": [],
       "source": []
